@startuml
' Template file to use to create the diagrams od the packages.
' Every file must have a sub part called INTERNAL with the internal connections of the package and
' a sub part called EXTERNAL with the external parts.
skinparam linetype polyline
skinparam linetype ortho

!startsub INTERNAL

    package src.engine {
        class src.engine.Engine
        class src.engine.Settings

        !includesub src.engine.scene.puml!INTERNAL
        !includesub src.engine.render.puml!INTERNAL
        !includesub src.engine.controller.puml!INTERNAL
        !includesub src.engine.gui.puml!INTERNAL

        class src.engine.ProcessManager
        class src.engine.ThreadManager
        class src.engine.TaskManager
    }

    src.engine.Engine o-- src.engine.controller.Controller
    src.engine.Engine -u.> src.engine.Settings
    src.engine.ProcessManager --o src.engine.Engine
    src.engine.ThreadManager --o src.engine.Engine
    src.engine.TaskManager --o src.engine.Engine
!endsub


!startsub EXTERNAL
    !includesub src.engine.scene.puml!EXTERNAL
    !includesub src.engine.render.puml!EXTERNAL
    !includesub src.engine.controller.puml!EXTERNAL
    !includesub src.engine.gui.puml!EXTERNAL

    src.engine.Engine o- src.output.ShapefileExporter
    src.engine.Engine o--o src.program.Program
    src.engine.Engine ..> src.input.ShapefileImporter
    src.engine.Engine ..> src.input.NetCDF
    src.engine.Engine ..> src.output.NetcdfExporter
    src.engine.Engine ..> src.program.Tools
    src.engine.Engine ..> src.program.ViewMode

    src.engine.Engine ..> src.error.ExportError
    src.engine.Engine ..> src.error.FilterError
    src.engine.Engine ..> src.error.InterpolationError
    src.engine.Engine ..> src.error.TransformationError
    src.engine.Engine ..> src.error.NetCDFImportError
    src.engine.Engine ..> src.error.PolygonError
    src.engine.Engine ..> src.error.SceneError
    src.engine.Engine ..> src.error.MapTransformationError
    src.engine.Engine ..> src.engine.gui.frames.modal.TextModal
!endsub

' Code that will affect only the current diagramde
' can be messy since will not be imported
hide members

@enduml